kubernetes/pods/istio/multiple-websockets-different-namespace/butterfly-webterminal/route.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: butterfly-4-istio
spec:
  hosts:
  - "butterfly-4.demo.istio-2.prod-1.k8s.devops.bot"
  gateways:
  - gateway-2
  http:
  - timeout: 300s
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: butterfly-4-istio
      weight: 100
    websocketUpgrade: true
